--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="gradient_bg bg-slate-200">
     <!-- Navigation Bar -->
-    <header class="container mx-auto">
+    <header class="container mx-auto transition-all duration-300 ease-in-out">
         <nav class="flex justify-between items-center py-8 mx-auto">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
@@ -22,26 +22,26 @@
                 </a>
             </div>
             <div
-                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 bg-opacity-30 backdrop-blur-xl border border-white lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
-                    <li>
-                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in"
                             href="./index.html">Home</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800   hover:font-extrabold  transition-al  ease-in"
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800   transition-al  ease-in"
                             href="./Pages/about.html">About</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in"
                             href="#">Activities</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in"
                             href="./Pages/gallery.html">Gallery</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800   hover:font-extrabold transition-all ease-in"
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in"
                             href="./Pages/contact.html">Contact</a>
                     </li>
                 </ul>
@@ -69,33 +69,33 @@
     </section>
 
     <!-- Ista Process  -->
-    <section class=" h-full md:h-[100vh] py-20 bg-[#00D897] flex items-center">
-        <div class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  md:flex md:flex-row md:space-x-10 md:space-y-0 md:justify-between md:items-center">
+    <section class=" h-full lg:h-[100vh] py-20 bg-[#00D897] flex items-center">
+        <div class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  lg:flex lg:flex-row lg:space-x-10 lg:space-y-0 lg:justify-between lg:items-center">
             <div
-                class=" space-y-2 hover:bg-[#00C288] py-8  px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
-                <div class="justify-center h-full md:h-[350px] items-center"><img class="h-[250px] md:h-[350px] mx-auto"
+                class=" space-y-2 hover:bg-[#00C288] py-10  px-3 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
+                <div class="justify-center h-full lg:h-[350px] items-center"><img class="h-[250px] lg:h-[350px] mx-auto"
                         src="./Graphics/Studying.svg" alt=""></div>
                 <div class="text-center font-black tracking-widest uppercase text-white text-2xl">Study.</div>
                 <div
-                    class="w-[20ch] mx-auto flex items-center justify-center md:w-full  text-slate-700 font-semibold text-lg text-center">
+                    class="w-2/3 mx-auto flex items-center justify-center lg:w-11/12  text-slate-700 font-semibold text-lg text-center">
                     Study the sector you want with high level education.</div>
             </div>
             <div
                 class=" space-y-2 hover:bg-[#00C288] py-8  px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
-                <div class="justify-center h-full md:h-[350px] items-center"><img class="h-[250px] md:h-[350px] mx-auto"
+                <div class="justify-center h-full lg:h-[350px] items-center"><img class="h-[250px] lg:h-[350px] mx-auto"
                         src="./Graphics/certificate.svg" alt=""></div>
                 <div class="text-center font-black tracking-widest uppercase text-white text-2xl">Certificate.</div>
                 <div
-                    class="w-[20ch] mx-auto flex items-center justify-center md:w-full  text-slate-700 font-semibold text-lg text-center">
+                    class="w-2/3 mx-auto flex items-center justify-center lg:w-11/12  text-slate-700 font-semibold text-lg text-center">
                     Obtain a international recognized certificate within just 2 Years of studying.</div>
             </div>
             <div
                 class=" space-y-2 hover:bg-[#00C288] py-8  px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
-                <div class="justify-center h-full md:h-[350px] items-center"><img class="h-[250px] md:h-[350px] mx-auto"
+                <div class="justify-center h-full lg:h-[350px] items-center"><img class="h-[250px] lg:h-[350px] mx-auto"
                         src="./Graphics/business man.svg" alt=""></div>
                 <div class="text-center font-black tracking-widest uppercase text-white text-2xl">Work.</div>
                 <div
-                    class="w-[20ch] mx-auto flex items-center justify-center md:w-full  text-slate-700 font-semibold text-lg text-center">
+                    class="w-2/3 mx-auto flex items-center justify-center lg:w-11/12  text-slate-700 font-semibold text-lg text-center">
                     Enter the world of career without risk get your job or make your own company</div>
             </div>
         </div>
