--- a/Pages/about.html
+++ b/Pages/about.html
@@ -15,36 +15,31 @@
 
 <body class="background bg-slate-200 font-[Montserrat]">
     <!-- Navigation Bar -->
-    <header class="container mx-auto">
+    <header class="container mx-auto transition-all duration-300 ease-in-out">
         <nav class="flex justify-between items-center py-8 mx-auto">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
-                <a href="/index.html">
+                <a href="../index.html">
                     ista<br>Zenata<span class="text-white">.</span>
                 </a>
             </div>
             <div
-                class="container mx-auto right-0 rounded-lg nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 bg-opacity-30 backdrop-blur-xl border border-white lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
-                    <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="../index.html">Home</a>
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold  transition-al  ease-in"
-                            href="./">About</a>
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800   transition-al  ease-in" href="./about.html">About</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="#">Activities</a>
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in" href="#">Activities</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="./gallery.html">Gallery</a>
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in" href="./gallery.html">Gallery</a>
                     </li>
-                    <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
-                            href="#">Contact</a>
+                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800  transition-all ease-in" href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
