--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </a>
             </div>
             <div
-                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
                     <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in"
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Ista Process  -->
-    <section class=" h-full lg:h-[100vh] py-20 bg-[#00D897] flex items-center">
+    <section class=" h-full lg:h-[80vh] py-20 bg-[#00D897] flex items-center">
         <div class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  lg:flex lg:flex-row lg:space-x-10 lg:space-y-0 lg:justify-between lg:items-center">
             <div
                 class=" space-y-2 hover:bg-[#00C288] py-10  px-3 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
