--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="flex justify-between items-center py-8 mx-auto">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
-                <a href="/index.html">
+                <a href="./">
                     ista<br>Zenata<span class="text-white">.</span>
                 </a>
             </div>
