--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -48,32 +48,32 @@
     </header>
 
     <!-- EMBED MAP  -->
-    <section class="text-gray-600 body-font  relative">
+    <section class="text-slate-600 body-font  relative">
         <div class="absolute inset-0 bg-gray-300">
             <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map"
                 scrolling="no"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.4825490054013!2d-7.452029418765826!3d33.64465647035059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cb89d303dc37%3A0x7302fcec02a52895!2sISTA%20Zenata!5e0!3m2!1sen!2sma!4v1698178586923!5m2!1sen!2sma"
-                style="filter: grayscale(01) contrast(1.3) opacity(.7);"></iframe>
+                style="filter: grayscale(01) contrast(1) opacity(.8);"></iframe>
         </div>
         <div class="container px-5 py-24 mx-auto flex">
             <div
                 class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md">
-                <h2 class="text-gray-900 text-2xl uppercase mb-1 font-medium title-font">Contact<span
+                <h2 class="text-slate-800 text-2xl uppercase mb-1 font-black tracking-widest title-font">Contact<span
                         class="text-4xl text-[#3AB795] ">.</span></h2>
-                <p class="leading-relaxed mb-5 text-gray-600">Ain harrouda , Zenata</p>
+                <p class="leading-relaxed mb-5 text-slate-600">Ain harrouda , Zenata</p>
                 <div class="relative mb-4">
-                    <label for="email" class="leading-7 text-sm text-gray-600">E-mail</label>
+                    <label for="email" class="leading-7 text-sm text-slate-600">E-mail</label>
                     <input type="email" id="email" name="email"
-                        class="w-full bg-white rounded border border-gray-300 focus:border-green-500 focus:ring-2 focus:ring-green-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                        class="w-full bg-white rounded border border-gray-300 focus:border-green-500 focus:ring-2 focus:ring-green-200 text-base outline-none text-slate-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                 </div>
                 <div class="relative mb-4">
-                    <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+                    <label for="message" class="leading-7 text-sm text-slate-600">Message</label>
                     <textarea id="message" name="message"
-                        class="w-full bg-white rounded border border-gray-300 focus:border-green-500 focus:ring-2 focus:ring-green-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                        class="w-full bg-white rounded border border-gray-300 focus:border-green-500 focus:ring-2 focus:ring-green-200 h-32 text-base outline-none text-slate-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
                 </div>
                 <button
                     class=" bg-[#00D897] [box-shadow:0px_8px_50px_0px_rgba(0,_216,_151,_0.50)] text-2xl hover:tracking-[.2em] transition-all duration-300 ease-in-out  text-slate-800 font-extrabold border-0 py-2 px-6 focus:outline-none uppercase">Send</button>
-                <p class="text-xs text-gray-500 mt-3"></p>
+                <p class="text-xs text-slate-500 mt-3"></p>
             </div>
         </div>
     </section>
