--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -13,7 +13,7 @@
 
 <body class="">
     <!-- Navigation Bar -->
-    <header class="container mx-auto transition-all duration-300 ease-in-out">
+    <header class="container mx-auto transition-all duration-300 ease-in-out z-50">
         <nav class="flex justify-between items-center py-8 mx-auto z-50">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
@@ -22,8 +22,8 @@
                 </a>
             </div>
             <div
-                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
-                <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
+                class="z-50 container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+                <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8 z-50">
                     <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
                     </li>
