--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
                     href="./Pages/about.html">Learn More</a></div>
         </div>
     </section>
-
+    
+    <!-- Footer -->
     <footer class="text-slate-600 body-font">
         <div
           class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
