--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -84,7 +84,7 @@
             class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
             <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
                 <a class="flex title-font font-medium items-center md:justify-start justify-center text-slate-900">
-                    <img width="150px" src="../Graphics/ISTA ZENATA.png" alt="">
+                    <img width="150px" src="./Graphics/ISTA ZENATA.png" alt="">
                 </a>
                 <p class="mt-2 text-sm text-slate-500">L'etablissement de L'ISTA ZENATA</p>
             </div>
@@ -161,18 +161,18 @@
         </div>
         <div class="bg-slate-100">
             <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                <p class="text-slate-500 text-sm text-center sm:text-left">©️ 2020 Tailblocks —
-                    <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-slate-600 ml-1"
-                        target="_blank">@knyttneve</a>
+                <p class="text-slate-500 text-sm text-center sm:text-left">© 2023 Ista Zenata —
+                    <a href="https://github.com/kourdroid/ista/" rel="noopener noreferrer" class="text-slate-600 ml-1"
+                        target="_blank">@Collaborators</a>
                 </p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                    <a class="text-slate-500">
+                    <a class="text-slate-500 hover:text-[#00D897] cursor-pointer">
                         <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             class="w-5 h-5" viewBox="0 0 24 24">
                             <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
                         </svg>
                     </a>
-                    <a class="ml-3 text-slate-500">
+                    <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
                         <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             class="w-5 h-5" viewBox="0 0 24 24">
                             <path
@@ -180,14 +180,14 @@
                             </path>
                         </svg>
                     </a>
-                    <a class="ml-3 text-slate-500">
+                    <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
                         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                             stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                             <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                             <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
                         </svg>
                     </a>
-                    <a class="ml-3 text-slate-500">
+                    <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
                         <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                             stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
                             <path stroke="none"
@@ -201,6 +201,7 @@
         </div>
     </footer>
 
+    
     <script src="../script.js"></script>
 </body>
 
