--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CONTACT | ISTA ZENATA</title>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="../style.css">
+
 </head>
 
 <body class="">
@@ -84,7 +85,7 @@
             class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
             <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
                 <a class="flex title-font font-medium items-center md:justify-start justify-center text-slate-900">
-                    <img width="150px" src="../Graphics/ISTA ZENATA.png" alt="">
+                    <img width="150px" src="./Graphics/ISTA ZENATA.png" alt="">
                 </a>
                 <p class="mt-2 text-sm text-slate-500">L'etablissement de L'ISTA ZENATA</p>
             </div>
@@ -201,7 +202,7 @@
         </div>
     </footer>
 
-
+    
     <script src="../script.js"></script>
 </body>
 
