--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
-    <title>ISTA</title>
+    <title>HOME | ISTA ZENATA</title>
 
 </head>
 
@@ -24,23 +24,23 @@
             <div
                 class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class=" transition-all duration-200 ease-in-out p-2 hover:bg-[#00D897] lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in"
                             href="./index.html">Home</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class=" transition-all duration-200 ease-in-out p-2 hover:bg-[#00D897] lg:hover:bg-opacity-50">
                         <a class="text-slate-800   transition-al  ease-in"
                             href="./Pages/about.html">About</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class=" transition-all duration-200 ease-in-out p-2 hover:bg-[#00D897] lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in"
                             href="#">Activities</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class=" transition-all duration-200 ease-in-out p-2 hover:bg-[#00D897] lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in"
                             href="./Pages/gallery.html">Gallery</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class=" transition-all duration-200 ease-in-out p-2 hover:bg-[#00D897] lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in"
                             href="./Pages/contact.html">Contact</a>
                     </li>
@@ -221,7 +221,7 @@
                     href="./Pages/about.html">Learn More</a></div>
         </div>
     </section>
-    
+
     <!-- Footer -->
     <footer class="text-slate-600 body-font">
         <div
