--- a/Pages/about.html
+++ b/Pages/about.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="../style.css">
-    <title>ISTA</title>
+    <title>ABOUT | ISTA ZENATA</title>
 
 </head>
 
