--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="gallery.css">
-    <title>Gallery</title>
+    <title>GALLERY | ISTA ZENATA</title>
 <style>
     .vid{
        
@@ -22,8 +22,8 @@
 
 <body class="background bg-slate-200 font-[Montserrat]">
     <!-- Navigation Bar -->
-    <header class="container mx-auto transition-all duration-300 ease-in-out">
-      <nav class="flex justify-between items-center py-8 mx-auto">
+    <header class="z-50 container mx-auto transition-all duration-300 ease-in-out">
+      <nav class="z-50 flex justify-between items-center py-8 mx-auto">
         <div
           class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
           <a href="../index.html">
@@ -32,7 +32,7 @@
         </div>
         <div
           class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
-          <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
+          <ul class="z-50 flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
             <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
               <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
             </li>
