--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 </head>
 
-<body class="gradient_bg bg-slate-200">
+<body class="gradient_bg bg-slate-200 ">
     <!-- Navigation Bar -->
-    <header class="container mx-auto transition-all duration-300 ease-in-out">
+    <header class="px-3 container mx-auto transition-all duration-300 ease-in-out">
         <nav class="flex justify-between items-center py-8 mx-auto">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
@@ -102,7 +102,7 @@
     </section>
 
     <!-- Director Word -->
-    <section class=" h-[100vh] py-48 flex items-center container mx-auto">
+    <section class="px-2 h-[100vh] py-48 flex items-center container mx-auto">
           <figure class="container max-w-screen-md mx-auto text-center items-center">
             <svg class="w-10 h-10 mx-auto mb-3 text-slate-400 " aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 14">
