--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -14,7 +14,7 @@
 
 <body class="">
     <!-- Navigation Bar -->
-    <header class="container mx-auto transition-all duration-300 ease-in-out z-50">
+    <header class="px-3 container mx-auto transition-all duration-300 ease-in-out z-50">
         <nav class="flex justify-between items-center py-8 mx-auto z-50">
             <div
                 class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
