--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -224,9 +224,52 @@
           </section>
         </section>
   </section>
-<!-- Show more -->
+<!-- Slider -->
 
-                
+
+<div id="gallery" class="relative w-full" data-carousel="slide">
+                  <!-- Carousel wrapper -->
+                  <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                       <!-- Item 1 -->
+                      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                          <img src="wh1 (1).jpeg" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
+                      </div>
+                      <!-- Item 2 -->
+                      <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
+                          <img src="wh1 (2).jpeg" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
+                      </div>
+                      <!-- Item 3 -->
+                      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                          <img src="wh1 (3).jpeg" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
+                      </div>
+                      <!-- Item 4 -->
+                      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                          <img src="wh1 (4).jpeg" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
+                      </div>
+                      <!-- Item 5 -->
+                      <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                          <img src="wh1 (5).jpeg" class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
+                      </div>
+                  </div>
+                  <!-- Slider controls -->
+                  <button type="button" class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+                      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-green-400/30 dark:bg-gray-800/30 group-hover:bg-green-600/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-green-800 dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                          <svg class="w-4 h-4 text-dark dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+                          </svg>
+                          <span class="sr-only">Previous</span>
+                      </span>
+                  </button>
+                  <button type="button" class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+                      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-green-400/30 dark:bg-gray-800/30 group-hover:bg-green-600/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-green-800 dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                          <svg class="w-4 h-4 text-dark dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                          </svg>
+                          <span class="sr-only">Next</span>
+                      </span>
+                  </button>
+              </div>
+    
 
     <footer class="text-slate-600 body-font bg-slate-200">
       <div
