--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -227,6 +227,13 @@
 
     <br>
     <br>
+    <br>
+    <!-- Prominent moments Section -->
+  <section class="py-20">
+    <div class=" mx-auto ">
+        <div class="text-center text-4xl font-black text-slate-800 ">Most Prominent moments
+        </div>
+        <br><br>
 <!-- Slider -->
 
 
