--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </header>
 
     <!-- Hero Section -->
-    <section class=" h-[100vh] bg-slate-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center ne">
+    <section class="  bg-slate-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center py-5">
         <div class="container flex-col mx-auto items-center justify-center w-[75%] space-y-10 lg:pt-10">
-            <div class="items-center w-3/5 md:w-72 mx-auto"><img src="./Graphics/Laravel.svg" alt=""></div>
-            <div class="items-center w-full mx-auto"><img src="./Graphics/Hero_Home.png" alt=""></div>
+            <div class="flex justify-center items-center w-3/5 md:w-[15%] mx-auto"><img src="./Graphics/Laravel.svg" alt=""></div>
+            <div class="flex justify-center items-center w-full mx-auto"><img  src="./Graphics/Hero_Home.png" alt=""></div>
             <div class="text-center text-2xl md:text-4xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career
                 Journey Today!</div>
             <div class="flex justify-center items-center pb-5 lg:pb-20">
