--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Ista Process  -->
-    <section class=" h-full lg:h-[80vh] py-20 bg-[#00D897] flex items-center">
+    <section class=" h-full  py-20 bg-[#00D897] flex items-center">
         <div class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  lg:flex lg:flex-row lg:space-x-10 lg:space-y-0 lg:justify-between lg:items-center">
             <div
                 class=" space-y-2 hover:bg-[#00C288] py-10  px-3 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
