Update hero Section

--- a/index.html
+++ b/index.html
@@ -53,19 +53,12 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="  bg-slate-100 [box-shadow:0px_10px_200px_0px_rgba(0,_135,_103,_0.20)] flex justify-center items-center py-5">
-        <div class="container flex-col mx-auto items-center justify-center w-[75%] space-y-10 lg:pt-10">
-            <div class="flex justify-center items-center w-3/5 md:w-[15%] mx-auto"><img src="./Graphics/Laravel.svg" alt=""></div>
-            <div class="flex justify-center items-center w-full mx-auto"><img  src="./Graphics/Hero_Home.png" alt=""></div>
-            <div class="text-center text-2xl md:text-4xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career
-                Journey Today!</div>
-            <div class="flex justify-center items-center pb-5 lg:pb-20">
-                <a class="uppercase justify-center text-center py-3 px-4 text-2xl hover:tracking-[0.2em] transition-all duration-300 ease-in-out  text-slate-800 font-extrabold bg-[#00D897] [box-shadow:0px_8px_50px_0px_rgba(0,_216,_151,_0.50)]"
-                    href="">
-                    Get Started
-                </a>
-            </div>
-        </div>
+    <section class="hero h-[100vh] flex justify-center items-center py-5">
+      <div class="container mx-auto flex flex-col justify-center items-start space-y-14 w-full">
+        <div class="w-2/5 text-8xl font-extrabold text-slate-800 ">Unlock Your Future at<br>ISTA ZENATA.</div>
+        <div class="w-1/2 font-semibold text-2xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career Journey Today!</div>
+        <div class="h-16 bg-slate-100 flex p-2 w-2/3 justify-between shadow-xl"><input class="bg-transparent pl-4 w-2/3 outline-none"  type="text" placeholder="YOUR EMAIL ADRESS"><button class="bg-[#00D897] px-5 font-bold text-slate-800 hover:tracking-[0.2em] transition-all duration-200 ease-in-out">Get Started</button></div>
+      </div>
     </section>
 
     <!-- Ista Process  -->
