--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <!-- Hero Section -->
     <section class="hero h-full flex justify-center items-center py-52">
       <div class="container mx-auto flex flex-col justify-center items-start space-y-14 w-full">
-        <div class="w-2/5 text-8xl font-extrabold text-slate-800 ">Unlock Your<br>Future at<br>ISTA ZENATA.</div>
-        <div class="w-1/2 font-semibold text-2xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career Journey Today!</div>
+        <div class="w-2/5 text-center mx-auto md:mx-0 md:text-left text-8xl font-extrabold text-slate-800 ">Unlock Your Future at ISTA ZENATA.</div>
+        <div class="w-1/2 text-center mx-auto md:mx-0 md:text-left font-semibold text-2xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career Journey Today!</div>
         <div class="h-16 bg-slate-100 flex p-2 w-2/3 justify-between shadow-xl"><input class="bg-transparent pl-4 w-2/3 outline-none"  type="text" placeholder="YOUR EMAIL ADRESS"><button class="bg-[#00D897] px-5 font-bold text-slate-800 hover:tracking-[0.2em] transition-all duration-200 ease-in-out">Get Started</button></div>
       </div>
     </section>
