--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="gradient_bg bg-slate-200 ">
+<body class="gradient_bg bg-slate-200 overflow-x-hidden">
     <!-- Navigation Bar -->
     <header class="px-3 container mx-auto transition-all duration-300 ease-in-out">
         <nav class="flex justify-between items-center py-8 mx-auto">
@@ -54,15 +54,16 @@
 
     <!-- Hero Section -->
     <section class="hero h-full flex justify-center items-center py-52">
+      <div class="absolute z-[0] top-[12.2%] -bottom-full right-0 left-0 bg-slate-200 bg-opacity-50 w-full md:hidden"></div>
       <div class="container mx-auto flex flex-col justify-center items-start space-y-14 w-full">
-        <div class="w-2/5 text-center mx-auto md:mx-0 md:text-left text-8xl font-extrabold text-slate-800 ">Unlock Your Future at ISTA ZENATA.</div>
-        <div class="w-1/2 text-center mx-auto md:mx-0 md:text-left font-semibold text-2xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career Journey Today!</div>
-        <div class="h-16 bg-slate-100 flex p-2 w-2/3 justify-between shadow-xl"><input class="bg-transparent pl-4 w-2/3 outline-none"  type="text" placeholder="YOUR EMAIL ADRESS"><button class="bg-[#00D897] px-5 font-bold text-slate-800 hover:tracking-[0.2em] transition-all duration-200 ease-in-out">Get Started</button></div>
+        <div class="w-full relative z-[1] px-10 md:px-0 md:w-2/5 text-center mx-auto md:mx-0 md:text-left text-6xl md:text-8xl font-extrabold text-slate-800">Unlock Your Future at ISTA ZENATA.</div>
+        <div class="w-1/2 relative z-[1] text-center mx-auto md:mx-0 md:text-left font-semibold text-2xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career Journey Today!</div>
+        <div class="mx-auto md:mx-0 h-16 relative z-[1] bg-slate-100 flex p-2 w-2/3 justify-between shadow-xl"><input class="bg-transparent pl-4 w-2/3 outline-none"  type="text" placeholder="EMAIL ADRESS"><button class="bg-[#00D897] px-5 font-bold text-slate-800 hover:bg-[#48c6a0] md:hover:tracking-[0.2em] transition-all duration-200 ease-in-out">Get Started</button></div>
       </div>
     </section>
 
     <!-- Ista Process  -->
-    <section class=" h-full  py-20 bg-[#00D897] flex items-center">
+    <section class="relative z-10 h-full  py-20 bg-[#00D897] flex items-center">
         <div class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  lg:flex lg:flex-row lg:space-x-10 lg:space-y-0 lg:justify-between lg:items-center">
             <div
                 class=" space-y-2 hover:bg-[#00C288] py-10  px-3 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
@@ -103,20 +104,32 @@
                 d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
             </svg>
             <blockquote>
-              <p class="text-lg md:text-2xl italic font-medium text-slate-800 ">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
+              <p class="text-lg md:text-2xl font-medium text-slate-800 ">Our objective and our ambition are to offer you higher quality training, an openness to civic life as well as the means
               to acquire knowledge and skills for successful social and professional integration.
               
               It is therefore with enthusiasm and confidence that the entire community of the Institute will continue its wonderful
               human adventure. May each of its actors be thanked!</p>
             </blockquote>
-            <figcaption class="flex flex-col md:flex md:flex-row items-center justify-center mt-6 space-x-3">
-              <img class="w-6 h-6 rounded-full"
+            <figcaption  class="flex flex-col md:flex md:flex-row items-center justify-center mt-6 space-x-3">
+              <img data-popover-target="popover-default" type="button" class="w-6 h-6 rounded-full"
                 src="./Images/director.png" alt="profile picture">
               <div class="flex flex-col md:flex md:flex-row items-center divide-x-0 divide-y-2 md:divide-x-2 md:divide-y-0 divide-slate-500 dark:divide-slate-700">
                 <cite class="p-0 md:pr-3 font-medium text-slate-900 ">Mr. El Kashash Lahna</cite>
                 <cite class="p-0 md:pl-3 text-sm text-slate-500">Directeur de ISTA ZENATA</cite>
               </div>
             </figcaption>
+            <!-- Pop Over Overlay -->
+            <div data-popover id="popover-default" role="tooltip"
+              class="absolute z-10 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
+              <div class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
+                <h3 class="font-semibold text-gray-900 dark:text-white">Mr. El Kashash Lahna</h3>
+              </div>
+              <div class="flex justify-center rounded-full py-5"><img class="rounded-full" src="./Images/director.png" alt=""></div>
+              <div class="px-3 pb-2">
+                <p>Le Directeur de L'itablissement ISTA ZENATA</p>
+              </div>
+              <div data-popper-arrow></div>
+            </div>
           </figure>
     </section>
 
