--- a/Pages/about.html
+++ b/Pages/about.html
@@ -58,7 +58,7 @@
                 <div class=" lg:w-10/12  flex justify-center"><img height="215px" src="../Graphics/ofppt_logo.png"
                         alt=""></div>
                 <div
-                    class="w-11/12  lg:w-3/4 flex justify-center bg-gradient-to-r shadow-2xl shadow-[#3F3D564D] from-slate-200 p-10 rounded-lg text-xl lg:text-2xl text-slate-700 font-semibold">
+                    class="w-11/12  lg:w-3/4 flex justify-center bg-gradient-to-r shadow-2xl shadow-[#3F3D564D] from-slate-300 p-10 text-xl lg:text-2xl text-slate-700 font-semibold">
                     L'Office de la formation professionnelle et de la promotion du travail (OFPPT) est un opérateur
                     public en formation
                     professionnelle, couvrant le territoire marocain.</div>
@@ -163,9 +163,9 @@
         <div class="container mx-auto justify-center items-center h-full text-slate-800 ">
             <div class="text-6xl uppercase py-10 font-black text-center">Our Commitement</div>
             <div
-                class="flex flex-col gap-10 lg:flex lg:flex-row  justify-center items-center container mx-auto bg-[#BFCCD3] py-5 lg:py-20 px-5 rounded-lg">
+                class="flex flex-col gap-10 lg:flex lg:flex-row  justify-center items-center container mx-auto bg-[#BFCCD3] py-5 lg:py-20 px-5 ">
                 <div class="w-1/2 lg:w-full"><img src="../Graphics/Commitment.svg" alt=""></div>
-                <div class="bg-slate-100 rounded-lg w-full">
+                <div class="bg-slate-100  w-full">
                     <div id="accordion-flush" class="p-5 rounded-xl" data-accordion="collapse"
                         data-active-classes="bg-white dark:bg-gray-900 text-gray-900 dark:text-white"
                         data-inactive-classes="text-gray-500 dark:text-gray-400">
@@ -290,11 +290,38 @@
                         construction et la concrétisation de leurs projets professionnels, en appui aux services assurés
                         par la plateforme
                         numérique My Way, ainsi que l’animation d’activités d’aide à l’insertion.</div>
-                    <div class="w-1/2 rounded-lg flex items-center"><img class="rounded-lg"
-                            src="../Images/photo_2023-10-20_23-32-13.jpg" alt=""></div>
+                    
                 </div>
             </div>
-
+            <section class="text-gray-600 body-font">
+                <div class="container px-5 py-24 mx-auto flex flex-wrap">
+                  
+                  <div class="flex flex-wrap md:-m-2 -m-1">
+                    <div class="flex flex-wrap w-1/2">
+                      <div class="md:p-2 p-1 w-1/2">
+                        <img alt="gallery" class="w-full object-cover h-full object-center block" src="../Images/AboutG3.jpeg">
+                      </div>
+                      <div class="md:p-2 p-1 w-1/2">
+                        <img alt="gallery" class="w-full object-cover h-full object-center block" src="../Images/AboutG5.jpeg">
+                      </div>
+                      <div class="md:p-2 p-1 w-full">
+                        <img alt="gallery" class="w-full h-full object-cover object-center block" src="../Images/AboutG1.jpeg">
+                      </div>
+                    </div>
+                    <div class="flex flex-wrap w-1/2">
+                      <div class="md:p-2 p-1 w-full">
+                        <img alt="gallery" class="w-full h-full object-cover object-center block" src="../Images/AboutG2.jpeg">
+                      </div>
+                      <div class="md:p-2 p-1 w-1/2">
+                        <img alt="gallery" class="w-full object-cover h-full object-center block" src="../Images/AboutG6.jpeg">
+                      </div>
+                      <div class="md:p-2 p-1 w-1/2">
+                        <img alt="gallery" class="w-full object-cover h-full object-center block" src="../Images/AboutG7.jpg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
         </div>
 
     </section>
@@ -304,12 +331,12 @@
         <div class="text-6xl uppercase py-10 font-black text-center text-slate-800 tracking-widest">HQE Batiment</div>
         <div class="flex flex-col container mx-auto space-y-10">
             <div
-                class="mx-auto p-14 bg-gradient-to-tr from-slate-300 w-1/2 text-center text-slate-800 text-2xl font-semibold rounded-lg shadow-xl">
+                class="mx-auto p-14 bg-gradient-to-tr from-slate-300 w-1/2 text-center text-slate-800 text-2xl font-semibold  shadow-xl">
                 L’Institut spécialisé de technologie appliquée de
                 Zenata obtient le label « HQE BATIMENT »</div>
-            <div><img class="rounded-lg" src="../Images/Hqe.png" alt=""></div>
+            <div><img class="w-full rounded-lg" src="../Images/AboutG4.jpeg" alt=""></div>
             <div
-                class="mx-auto p-14 bg-gradient-to-tr from-slate-300 w-full text-center text-slate-800 text-2xl font-semibold rounded-lg shadow-xl">
+                class="mx-auto p-14 bg-gradient-to-tr from-slate-300 w-full text-center text-slate-800 text-2xl font-semibold  shadow-xl">
                 L’OFPPT confirme son engagement en matière de développement durable. C’est à Zenata qu’il a célébré ce
                 19 janvier 2023
                 la certification de son nouvel institut spécialisé de technologie appliquée (ISTA), du label Haute
@@ -334,8 +361,8 @@
                 would like to learn more about OFPPT ISTA Zenata, feel free to contact us We look forward
                 to welcoming you to our community.</div>
             <div class="mx-auto"><a
-                    class="bg-gradient-to-r rounded-lg from-[#00D897] to-[#00D8974D] px-5 py-3 text-4xl font-black text-slate-800 uppercase hover:tracking-widest hover:scale-110 transition-all duration-300 ease-in shadow-lg shadow-[#00D8974D] hover:border-2 hover:border-white "
-                    href="">
+                    class="bg-gradient-to-r  from-[#00D897] to-[#00D8974D] px-5 py-3 text-4xl font-black text-slate-800 uppercase hover:tracking-widest hover:scale-110 transition-all duration-300 ease-in shadow-lg shadow-[#00D8974D]   "
+                    href="/Pages/contact.html">
                     Contact Now</a>
             </div>
         </div>
