--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -19,7 +19,7 @@
     <header class="z-50 px-3 container mx-auto transition-all duration-300 ease-in-out">
       <nav class="z-50 flex justify-between items-center py-8 mx-auto">
         <div
-          class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
+          class="z-50 uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
           <a href="../index.html">
             ista<br>Zenata<span class="text-white">.</span>
           </a>
@@ -31,7 +31,7 @@
               <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
             </li>
             <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
-              <a class="text-slate-800   transition-al  ease-in" href="./about.html">About</a>
+              <a class="text-slate-800   transition-all  ease-in" href="./about.html">About</a>
             </li>
             <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
               <a class="text-slate-800  transition-all ease-in" href="#">Activities</a>
@@ -52,10 +52,10 @@
 
     <!-- Video Background Section -->
     <section class="bg-slate-200 overflow-hidden w-[100vw] h-[100vh] ">
-      <div class="absolute top-[12.3%] bottom-[-31%] overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-t from-slate-200 z-[2]"><img src="../Graphics/Gradient.png" alt=""></div>
-      <div class="absolute top-[12.3%] bottom-[-31%] overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-b from-slate-200 z-[1]"></div>
-      <div class="absolute top-[12.3%] bottom-[-31%] overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-t from-slate-200 z-[0]"></div>
-      <div class="absolute top-[12.3%] bottom-[-31%] overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-slate-800 bg-opacity-30"></div>
+      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-t from-slate-200 z-[2]"><img src="../Graphics/Gradient.png" alt=""></div>
+      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-b from-slate-200 z-[1]"></div>
+      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-t from-slate-200 z-[0]"></div>
+      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-slate-800 bg-opacity-30"></div>
       <div class=" w-[100vw] h-[100vh] overflow-hidden">
         <video muted autoplay inlines-play loop class=" object-cover w-[100vw] h-[100vh] overflow-hidden absolute z-[0]" src="OFPPT - Une formation de qualité pour des métiers d'avenir (1).mp4" class="vid"></video>    
       </div>
@@ -66,7 +66,7 @@
 
 
   <!-- gallery Section -->
-  <section class="pb-">
+  <section class="bg-slate-200 relative z-50">
     <div class=" mx-auto ">
         <!-- video section-->
         <section class="">
