--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -280,8 +280,9 @@
                   </button>
               </div>
     
-
-    <footer class="text-slate-600 body-font bg-slate-200">
+</div>
+</section>
+    <footer class="text-slate-600 body-font bg-slate-200 relative z-50 bottom-0 left-0 right-0">
       <div
         class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
         <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
