fix some issues

--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -52,10 +52,10 @@
 
     <!-- Video Background Section -->
     <section class="bg-slate-200 overflow-hidden w-[100vw] h-[100vh] ">
-      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-t from-slate-200 z-[2]"><img src="../Graphics/Gradient.png" alt=""></div>
-      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-b from-slate-200 z-[1]"></div>
-      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-gradient-to-t from-slate-200 z-[0]"></div>
-      <div class="absolute top-[12.3%] -bottom-full overflow-hidden w-[100vw] h-[100vh] left-0 right-0 bg-slate-800 bg-opacity-30"></div>
+      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-t from-slate-200 z-[2]"><img src="../Graphics/Gradient.png" alt=""></div>
+      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-b from-slate-200 z-[1]"></div>
+      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-t from-slate-200 z-[1]"></div>
+      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-slate-800 bg-opacity-30"></div>
       <div class=" w-[100vw] h-[100vh] overflow-hidden">
         <video muted autoplay inlines-play loop class=" object-cover w-[100vw] h-[100vh] overflow-hidden absolute z-[0]" src="OFPPT - Une formation de qualité pour des métiers d'avenir (1).mp4" class="vid"></video>    
       </div>
@@ -225,9 +225,7 @@
         </section>
   </section>
 
-    <br>
-    <br>
-    <br>
+
     <!-- Prominent moments Section -->
   <section class="py-20">
     <div class=" mx-auto ">
@@ -281,7 +279,8 @@
               </div>
     
 </div>
-</section>
+  </section>
+    <!-- Footer -->
     <footer class="text-slate-600 body-font bg-slate-200 relative z-50 bottom-0 left-0 right-0">
       <div
         class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
